force-app/main/default/objects/SFS_Interaction_Click__c/SFS_Interaction_Click__c.object-meta.xml
<CustomObject>
    <description>Objeto que recibe los datos provenientes de Click</description>
    <label>SFS Interaction Click</label>
    <nameField>
        <displayFormat>{000000000}</displayFormat>
        <label>SFS Interaction Click Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>SFS Interactions Click</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>