force-app/main/default/objects/SFS_Interaction_Click__c/fields/CoIT_Client_Address__c.field-meta.xml
<CustomField>
    <fullName>CoIT_Client_Address__c</fullName>
    <label>Dirección Cliente</label>
    <length>64</length>
    <type>Text</type>
</CustomField>