force-app/main/default/objects/SFS_Interaction_Click__c/fields/CoIT_Client_Email__c.field-meta.xml
<CustomField>
    <fullName>CoIT_Client_Email__c</fullName>
    <label>Email Cliente</label>
    <length>128</length>
    <type>Text</type>
</CustomField>