force-app/main/default/objects/SFS_Interaction_Click__c/fields/CoIT_Client_Name__c.field-meta.xml
<CustomField>
    <fullName>CoIT_Client_Name__c</fullName>
    <label>Nombre Cliente</label>
    <length>255</length>
    <type>Text</type>
</CustomField>