force-app/main/default/objects/SFS_Interaction_Click__c/fields/CoIT_Description__c.field-meta.xml
<CustomField>
    <fullName>CoIT_Description__c</fullName>
    <label>Descripción</label>
    <length>255</length>
    <type>Text</type>
</CustomField>