force-app/main/default/objects/SFS_Interaction_Click__c/fields/CoIT_Diagnosis__c.field-meta.xml
<CustomField>
    <fullName>CoIT_Diagnosis__c</fullName>
    <label>Diagnostico</label>
    <length>256</length>
    <type>LongTextArea</type>
</CustomField>