force-app/main/default/objects/SFS_Interaction_Click__c/fields/CoIT_Latitude__c.field-meta.xml
<CustomField>
    <fullName>CoIT_Latitude__c</fullName>
    <label>Latitude</label>
    <precision>8</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>