force-app/main/default/objects/SFS_Interaction_Click__c/fields/CoIT_Longitude__c.field-meta.xml
<CustomField>
    <fullName>CoIT_Longitude__c</fullName>
    <label>Longitude</label>
    <precision>8</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>