force-app/main/default/objects/SFS_Interaction_Click__c/fields/CoIT_No_Client_Document__c.field-meta.xml
<CustomField>
    <fullName>CoIT_No_Client_Document__c</fullName>
    <label>N. Documento Cliente</label>
    <length>255</length>
    <type>Text</type>
</CustomField>