force-app/main/default/objects/SFS_Interaction_Click__c/fields/CoIT_No_Technical_Document__c.field-meta.xml
<CustomField>
    <fullName>CoIT_No_Technical_Document__c</fullName>
    <label>N. Documento Técnico</label>
    <length>64</length>
    <type>Text</type>
</CustomField>