force-app/main/default/objects/SFS_Interaction_Click__c/fields/CoIT_Numero_Caso_SIAB__c.field-meta.xml
<CustomField>
    <fullName>CoIT_Numero_Caso_SIAB__c</fullName>
    <label>Número Caso SIAB</label>
    <length>255</length>
    <type>Text</type>
</CustomField>