force-app/main/default/objects/SFS_Interaction_Click__c/fields/CoIT_Reason_for_non_provision_of_service__c.field-meta.xml
<CustomField>
    <fullName>CoIT_Reason_for_non_provision_of_service__c</fullName>
    <label>Motivo no prestación del servicio</label>
    <length>100</length>
    <type>Text</type>
</CustomField>