force-app/main/default/objects/SFS_Interaction_Click__c/fields/CoIT_RToken__c.field-meta.xml
<CustomField>
    <fullName>CoIT_RToken__c</fullName>
    <label>RToken</label>
    <length>255</length>
    <type>Text</type>
</CustomField>