force-app/main/default/objects/SFS_Interaction_Click__c/fields/CoIT_Severity__c.field-meta.xml
<CustomField>
    <fullName>CoIT_Severity__c</fullName>
    <label>Severidad</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Bajo Impacto: 0 - 1 día</fullName>
            </value>
            <value>
                <fullName>Bajo Impacto: 0 - 3 días</fullName>
            </value>
            <value>
                <fullName>Bajo Impacto: 0 - 5 días</fullName>
            </value>
            <value>
                <fullName>Moderado: 6 - 19 días</fullName>
            </value>
            <value>
                <fullName>Alto Impacto: 20 o más días</fullName>
            </value>
            <value>
                <fullName>Alto</fullName>
                <isActive>false</isActive>
                <label>Alto</label>
            </value>
            <value>
                <fullName>Bajo</fullName>
                <isActive>false</isActive>
                <label>Bajo</label>
            </value>
            <value>
                <fullName>Medio</fullName>
                <isActive>false</isActive>
                <label>Medio</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>