force-app/main/default/objects/SFS_Interaction_Click__c/fields/CoIT_Source_Id__c.field-meta.xml
<CustomField>
    <fullName>CoIT_Source_Id__c</fullName>
    <label>ID Fuente</label>
    <length>100</length>
    <type>Text</type>
</CustomField>