force-app/main/default/objects/SFS_Interaction_Click__c/fields/CoIT_Source_Number__c.field-meta.xml
<CustomField>
    <fullName>CoIT_Source_Number__c</fullName>
    <label>Source Number</label>
    <precision>8</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>