force-app/main/default/objects/SFS_Interaction_Click__c/fields/CoIT_Technical_Name__c.field-meta.xml
<CustomField>
    <fullName>CoIT_Technical_Name__c</fullName>
    <label>Nombre Técnico</label>
    <length>255</length>
    <type>Text</type>
</CustomField>