force-app/main/default/objects/SFS_Interaction_Click__c/fields/CoIT_Type_of_task_to_perform__c.field-meta.xml
<CustomField>
    <fullName>CoIT_Type_of_task_to_perform__c</fullName>
    <label>Tipo de tarea a realizar</label>
    <length>64</length>
    <type>Text</type>
</CustomField>