force-app/main/default/objects/SFS_Interaction_Click__c/fields/ZZ_CoIT_Client_Email__c.field-meta.xml
<CustomField>
    <fullName>ZZ_CoIT_Client_Email__c</fullName>
    <label>ZZ Email Cliente</label>
    <type>Email</type>
</CustomField>