force-app/main/default/objects/SFS_Interaction_Click__c/fields/ZZ_CoIT_Client_Phone__c.field-meta.xml
<CustomField>
    <fullName>ZZ_CoIT_Client_Phone__c</fullName>
    <label>ZZ Telefono Cliente</label>
    <type>Phone</type>
</CustomField>