force-app/main/default/objects/SFS_Interaction_Click__c/fields/zzCoIT_Cause__c.field-meta.xml
<CustomField>
    <fullName>zzCoIT_Cause__c</fullName>
    <label>zzCausa</label>
    <length>255</length>
    <type>Text</type>
</CustomField>