force-app/main/default/objects/SFS_Interaction_Click__c/fields/zzCoIT_Diagnosis__c.field-meta.xml
<CustomField>
    <fullName>zzCoIT_Diagnosis__c</fullName>
    <label>zzDiagnostico</label>
    <length>255</length>
    <type>Text</type>
</CustomField>