force-app/main/default/objects/SFS_Interaction_Click__c/fields/ZZCoIT_No_Client_Document__c.field-meta.xml
<CustomField>
    <fullName>ZZCoIT_No_Client_Document__c</fullName>
    <label>ZZ N. Documento Cliente</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>