force-app/main/default/objects/SFS_Interaction_Click__c/fields/ZZCoIT_No_Technical_Document__c.field-meta.xml
<CustomField>
    <fullName>ZZCoIT_No_Technical_Document__c</fullName>
    <label>ZZN. Documento Técnico</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>