force-app/main/default/objects/SFS_Interaction_Click__c/fields/ZZN_Documento_Asesor__c.field-meta.xml
<CustomField>
    <fullName>ZZN_Documento_Asesor__c</fullName>
    <label>ZZN. Documento Asesor</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>