force-app/main/default/objects/SFS_Interaction_Click__c/fields/ZZNombre_Asesor__c.field-meta.xml
<CustomField>
    <fullName>ZZNombre_Asesor__c</fullName>
    <label>ZZNombre Asesor</label>
    <length>50</length>
    <type>Text</type>
</CustomField>