force-app/main/default/objects/SFS_Interaction_Click__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>CREATED_DATE</columns>
    <columns>CoIT_Source_Id__c</columns>
    <columns>CoIT_Numero_Caso_SIAB__c</columns>
    <columns>CoIT_Severity__c</columns>
    <columns>CREATEDBY_USER</columns>
    <columns>LAST_UPDATE</columns>
    <columns>CoIT_No_Technical_Document__c</columns>
    <columns>CoIT_Source_Number__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>